updating the client
